--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
+<mat-toolbar color="primary">
+  <span>Family Vacation App</span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>
+      <a mat-raised-button routerLink="dates">New Vacation</a>
+    </button>
+    <button mat-menu-item>
+      <a mat-raised-button routerLink="planner">Plan</a>
+    </button>
+  </mat-menu>
+</mat-toolbar>
 <div>
   <app-date-selector (dateSelected)="onDateSelected($event)"></app-date-selector>
 </div>
