--- a/src/app/container-display/container-display.component.html
+++ b/src/app/container-display/container-display.component.html
@@ -1,3 +1,4 @@
+<div class="dates">
 <ng-container *ngFor="let i of [].constructor(numberOfContainers)">
   <div class="textarea">
   <mat-form-field>
@@ -21,3 +22,4 @@
   <button mat-raised-button color="accent">Save</button>
   </div>
 </ng-container>
+</div>
